<resources>
    <string name="app_name">MyYearbook</string>
    <string name="hello_world">Hello World</string>
    <string name="todo">TODO</string>
    <string name="yearbook_name">Remi Rivera: My favorite Pokemon is Victini</string>
    <string name="press_me">Press Me</string>
    <string name="job_plans">To get a job after graduation, I need to expand my resume, learn more coding languages, finish personal projects, make connections with other people in my field, and decide what companies that I would like to apply to.</string>
    <string name="muhammad">Muhammad</string>
    <string name="remi">Remi</string>
    <string name="alex">Alex</string>
    <string name="who_s_yearbook_would_you_like_to_see">Who\'s yearbook would you like to see?</string>
    <string name="hello">Hello!</string>
    <string name="home">Home</string>
    <string name="alex_isiofia_i_like_listening_to_music">Alex Isiofia: I like listening to music!</string>
    <string name="todo1">TODO</string>
    <string name="press">Press</string>
    <string name="software_engineer">In the future, I would like to become a software engineer.</string>
    <string name="home3">Home</string>
    <string name="graduation_plans_m">After graduation, I plan on working for a good tech company, and eventually even move up in ranks to work for a FAANG company.</string>
    <string name="push_me_2">PUSH ME</string>
    <string name="jiraiya_txt">Hi, my name is Jiraiya. I am one of the three legendary Sannin of the Hidden Leaf.</string>
</resources>